--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap');
-
 .box-container {
     margin: 32px 12vw;
     display: flex;
@@ -16,24 +14,20 @@
     text-decoration: none;
     color: white;
     font-family: 'Raleway', sans-serif;
-    background-color: #ff8800;
-    border-bottom: 12px #ff7605 solid;
-    border-right: 12px #ff7605 solid;
+    background-color: hsl(27, 100%, 50%);
+    border-bottom: 12px hsl(22, 100%, 51%) solid;
+    border-right: 12px hsl(22, 100%, 51%) solid;
     padding: 36px 12px 28px 16px;
     gap: 16px;
     border-radius: 2.5vw;
     box-shadow: 0px 0px 10px black;
 }
-.box > h2 {
-    text-align: center;
-    font-size: 32px;
-    padding: 0px;
-    margin: 0px;
-}
 
 .box > p {
     margin: 0px;
-    font-size: 18px;
+    color: white;
+    font-size: 20px;
+    font-weight: 400;
     text-align: center;
 }
 
