--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,21 @@
-<h2>Welcome to zalwicker.dev</h2>
-<p></p>
+<h3 style="margin-top: 16px;">A website and portfolio created by and for Zach Alwicker. Enjoy your visit!</h3>
+<div class="separator"></div>
+<app-project-spotlight></app-project-spotlight>
+<div class="separator"></div>
 <div class="box-container">
     <a href="#" class="box">
         <fa-icon [icon]="faUser" size="4x" style="color: white"></fa-icon>
         <h2>About Me</h2>
-        <p>This section is about me and my goals in software development and game design.</p>
+        <p>Learn about me and my goals in software development and game design.</p>
     </a>
     <a href="#" class="box">
         <fa-icon [icon]="faLightbulb" size="4x" style="color: white"></fa-icon>
         <h2>My Projects</h2>
-        <p>Some overview of projects I've worked on in the past and the skills I picked up from them.</p>
+        <p>Look at projects I've worked on in the past and the skills I picked up from them.</p>
     </a>
     <a href="#" class="box">
         <fa-icon [icon]="faClipboard" size="4x" style="color: white"></fa-icon>
         <h2>My Resume</h2>
-        <p>My formal resume that can be viewed and printed.</p>
+        <p>View my formal resume that can be viewed and printed.</p>
     </a>
 </div>
