--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -10,6 +10,11 @@
     border-bottom: 4px solid #BF2800
 }
 
+img {
+    border-radius: 100%;
+    background-color: #F1815C;
+}
+
 .site-name {
     text-decoration: none; 
     color: white; 
@@ -25,35 +30,6 @@
     color: white; 
     text-transform: uppercase; 
     font-weight: bolder; 
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
     font-size: 24px;
     padding: 64px;
-}
-
-@keyframes bounce {
-    0% {
-        transform: scale(1, 1);
-    }
-    50% {
-        transform: scale(1.2, 1.2);
-    }
-    100% {
-        transform: scale(1, 1);
-    }
-}
-
-.navbar-icon {
-    color: white;
-}
-
-.navbar-icon:hover {
-    animation-name: bounce;
-    animation-duration: .8s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-}
-
-fa-icon {
-    color: '#fff';
-    padding: 0px 12px;
 }
