--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,16 +1,12 @@
 <div class="navbar">
     <div style="flex: 1; display: flex; height: 100%; align-items: center; justify-content: left;">
-        <a href="/" style="display: inline-block; aspect-ratio: 1; height: 80%;"><img src="assets/icon.png" style="width: 100%; height: 100%"></a>
+        <a routerLink="/" style="display: inline-block; aspect-ratio: 1; height: 80%;"><img src="assets/icon.png" style="width: 100%; height: 100%"></a>
         <p class="site-name">Zach Alwicker</p>
     </div>
     <div style="flex: 1; display: flex; justify-content: center">
-        <a href="./about.html" class="navbar-link">About</a>
-        <a href="#" class="navbar-link">Projects</a>
-        <a href="./resume.html" class="navbar-link">Resume</a>
+        <a routerLink="/about" class="navbar-link">About</a>
+        <a routerLink="/projects" class="navbar-link">Projects</a>
+        <a routerLink="/resume" class="navbar-link">Resume</a>
     </div>
-    <div style="flex: 1; display: flex; height: 100%; align-items: center; justify-content: right; gap: .5vw">
-        <a href="#" class="navbar-icon"><fa-icon [icon]="faGithub" size="3x" style="color: white"></fa-icon></a>
-        <a href="#" class="navbar-icon"><fa-icon [icon]="faInstagram" size="3x" style="color: white"></fa-icon></a>
-        <a href="#" class="navbar-icon"><fa-icon [icon]="faLinkedIn" size="3x" style="color: white"></fa-icon></a>
-    </div>
+    <app-social-links style="flex: 1"></app-social-links>
 </div>
