--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,43 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap');
 body {
     margin: 0px;
-    background-color: #272727
+    background: linear-gradient(-30deg, #272727, #423131);
+    font-family: 'Raleway', sans-serif;
+    height: 100%;
+    color: white;
+}
+
+h1 {
+    text-align: center;
+    font-size: 52px;
+    margin-bottom: 16px;
+}
+
+h2 {
+    text-align: center;
+    font-size: 32px;
+    padding: 0px;
+    margin: 0px;
+}
+
+h3 {
+    font-size: 32px;
+    text-align: center;
+    font-weight: 400;
+    margin-top: 0px;
+}
+
+h4 {
+    font-size: 18px;
+}
+
+.separator {
+    width: 25vw;
+    height: 2px;
+    background-color: #fff;
+    margin: auto;
+    margin-top: 24px;
+    margin-bottom: 16px;
+    border-bottom-left-radius: 1px;
+    border-bottom-right-radius: 1px;
 }
