--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,98 +1,52 @@
-<h1>My Resume</h1>
-<h1 class="name">Zach Alwicker</h1>
-<div style="display: flex; align-items: center; flex-direction: column; width: 768px; margin: auto">
-    <div class="contact-info">
-        <div class="icon-text">
-            <fa-icon [icon]="faEnvelope" size="2x"></fa-icon>
-            <a href="#">zalwicker@gmail.com</a>
-        </div>
-        <div class="icon-text">
-            <fa-icon [icon]="faPhone" size="2x"></fa-icon>
-            <a href="#">+1 (224) 256-1516</a>
-        </div>
-    </div>
-    <div class="resume-item">
-        <h2>Education</h2>
-        <ul style="list-style-type: none; margin: 0px;">
-            <li>
-                University of Illinois at Springfield, Springfield, IL 62703
-                <ul style="list-style-type: none;">
-                    <li>Bachelor of Science in Computer Science</li>
-                    <li>GPA: 3.82</li>
-                    <li>Graduation Date: December 2022.</li>
-                </ul>
-            </li>
-            <li>
-                Huntley High School, Huntley, IL 60142
-                <ul style="list-style-type: none;">
-                    <li>Graduation Date: May 2019.</li>
-                    <li>Cum Laude.</li>
-                </ul>
-            </li>
+<div style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
+    <h1>My Resume</h1>
+</div>
+<div class="resume">
+    <div style="flex: 1">
+        <h3>Contact</h3>
+        <ul class="contact">
+            <li><strong>Phone:</strong> (224) 256-1516</li>
+            <li><strong>Email:</strong>&nbsp;<a href="mailto:zalwicker@gmail.com">zalwicker@gmail.com</a></li>
+            <li><strong>Website:</strong>&nbsp;<a href="https://www.zalwicker.dev/">zalwicker.dev</a></li>
+            <li><strong>LinkedIn:</strong>&nbsp;<a href="https://www.linkedin.com/in/zalwicker/">zalwicker</a></li>
+            <li><strong>GitHub:</strong>&nbsp;<a href="https://github.com/zalwicker2/">zalwicker</a></li>
+        </ul>
+        <h3>Profile</h3>
+        <p>I am task oriented and adaptable. If I am given a task, I will complete it quickly and efficiently, without
+            cutting corners. I am always willing to learn new skills and participate in new opportunities to improve
+            myself and my career. I am passionate and energetic about that work that I do, because I am proud of what I
+            have done and what I will do.</p>
+        <h3>Languages</h3>
+        <ul>
+            <li>JavaScript</li>
+            <li>TypeScript</li>
+            <li>Lua</li>
+            <li>C#</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Python</li>
+            <li>C++</li>
+            <li>CMake</li>
+        </ul>
+        <h3>Frameworks</h3>
+        <ul>
+            <li>React Native</li>
+            <li>Angular</li>
+            <li>Vue.js</li>
+        </ul>
+        <h3>Miscellanous</h3>
+        <ul>
+            <li>MongoDB</li>
+            <li>AWS Lightsail and EC2</li>
+            <li>Microsoft Azure</li>
         </ul>
     </div>
-    <div class="resume-item">
-        <h2>Work Experience</h2>
-        <ul style="list-style-type: none; margin: 0px">
-            <li>
-                <h4 style="padding: 0px; margin: 0px">Senior Web Development Intern at UIS Web Services</h4>
-                <h5 style="padding: 0px; margin: 0px">September 2022 - December 2022</h5>
-                <ul>
-                    <li>Primarily worked on developing the UIS app in React Native</li>
-                    <li>Worked with pulling data from web APIs, including Canvas LMS API and Twitter API</li>
-                </ul>
-            </li>
-            <li>
-                <h4 style="padding: 0px; margin: 0px">Application Software Development Intern at Shure Incorporated</h4>
-                <h5 style="padding: 0px; margin: 0px"> May 2022 - August 2022</h5>
-                <ul>
-                    <li>Used Qt and C++ to work on Wireless Workbench project</li>
-                    <li>Worked with Sparkle and WinSparkle libraries to develop an auto-update</li>
-                    <li>Worked with CMake to build software</li>
-                    <li>Used the Angular framework with the d3 graphics library to graph an interactive frequency plot from an XML file</li>
-                </ul>
-            </li>
-            <li>
-                <h4 style="padding: 0px; margin: 0px">Content Editor at UIS Web Services</h4>
-                <h5 style="padding: 0px; margin: 0px">November 2021 - May 2022</h5>
-                <ul>
-                    <li>Used Drupal to manage the UIS website. Created 29 sub-sites on the UIS site.</li>
-                    <li>Used HTML and CSS to make custom blocks and functionality for the site.</li>
-                    <li>Worked with Google Analytics suite to track various metrics about the site.</li>
-                </ul>
-            </li>
-            <li>
-                <h4 style="padding: 0px; margin: 0px">Code Sensei at Code Ninjas Algonquin</h4>
-                <h5 style="padding: 0px; margin: 0px">August 2018 - August 2021</h5>
-                <ul>
-                    <li>Helped kids follow the programming curriculum at Code Ninjas, answered questions that kids have, helped them debug their programs.</li>
-                    <li>Planned and taught five summer camps, centered around Roblox, JavaScript, and website development.</li>
-                </ul>
-            </li>
-            <li>
-                <h4 style="padding: 0px; margin: 0px">Curriculum Developer at Code Ninjas</h4>
-                <h5 style="padding: 0px; margin: 0px">October 2020 - December 2020</h5>
-                <ul>
-                    <li>Developed a curriculum for a programming-based summer camp that would be distributed to Code Ninjas franchises around the country.</li>
-                    <li>Provided me with a great deal of experience in Microsoft Office and understanding essential programming concepts.</li>
-                </ul>
-            </li>
-        </ul>
-    </div>
-    <div class="resume-item">
-        <h2>Software, Languages, and Frameworks</h2>
-        <ul style="list-style-type: none; margin: 0px;">
-            <li>Advanced development with Java, C#, Lua, JavaScript, HTML, CSS.</li>
-            <li>Intermediate development with C++, Python, Angular, React Native, Unity, TypeScript, and CMake</li>
-            <li>Experienced with both Windows and Mac, as well as Android and iPhone development</li>
-        </ul>
-    </div>
-    <div class="resume-item">
-        <h2>Honor Societies</h2>
-        <ul style="list-style-type: none; margin: 0px;">
-            <li>Phi Kappa Tau, Zeta Zeta Chapter. President in 2022.</li>
-            <li>Leadership Lived program at UIS.</li>
-            <li>Capital Scholars Honors graduate of UIS.</li>
-        </ul>
+    <div style="flex: 2">
+        <h3>Education</h3>
+        <app-experience *ngFor="let experience of education" [experience]="experience"></app-experience>
+        <h3>Work Experience</h3>
+        <app-experience *ngFor="let experience of work_experience" [experience]="experience"></app-experience>
+        <h3>Freelance Projects & Jobs</h3>
+        <app-experience *ngFor="let experience of work_freelance" [experience]="experience"></app-experience>
     </div>
 </div>
