--- a/src/app/social-links/social-links.component.html
+++ b/src/app/social-links/social-links.component.html
@@ -1,5 +1,8 @@
-<div style="display: flex; height: 100%; align-items: center; justify-content: right; gap: .5vw">
-    <a href="https://github.com/zalwicker2/" class="navbar-icon"><fa-icon [icon]="faGithub" size="3x" style="color: white"></fa-icon></a>
-    <a href="https://www.instagram.com/zach.alw/" class="navbar-icon"><fa-icon [icon]="faInstagram" size="3x" style="color: white"></fa-icon></a>
-    <a href="https://www.linkedin.com/in/zach-alwicker-a74b18221/" class="navbar-icon"><fa-icon [icon]="faLinkedIn" size="3x" style="color: white"></fa-icon></a>
+<div class="icons">
+    <a href="https://github.com/zalwicker2/" class="navbar-icon"><fa-icon [icon]="faGithub" size="3x"
+            style="color: white"></fa-icon></a>
+    <a href="https://www.instagram.com/zach.alw/" class="navbar-icon"><fa-icon [icon]="faInstagram" size="3x"
+            style="color: white"></fa-icon></a>
+    <a href="https://www.linkedin.com/in/zach-alwicker-a74b18221/" class="navbar-icon"><fa-icon [icon]="faLinkedIn"
+            size="3x" style="color: white"></fa-icon></a>
 </div>
