--- a/src/app/home/cta-buttons/cta-buttons.component.css
+++ b/src/app/home/cta-buttons/cta-buttons.component.css
@@ -17,14 +17,14 @@
     box-shadow: 0px 0px 5px black;
 }
 
-.box > h2 {
+.box>h2 {
     text-align: center;
     font-size: 32px;
     padding: 0px;
     margin: 0px;
 }
 
-.box > p {
+.box>p {
     margin: 0px;
     font-size: 18px;
     text-align: center;
@@ -37,3 +37,13 @@
     align-items: center;
 }
 
+@media screen and (max-width: 800px) {
+    .box-container {
+        gap: 32px;
+        flex-direction: column;
+    }
+
+    .box-container .box {
+        width: 80%;
+    }
+}
