--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,8 @@
-<h1>zalwicker.dev</h1>
-<h3 style="margin-top: 16px;">A website and portfolio created by and for Zach Alwicker. Enjoy your visit!</h3>
-<div class="separator"></div>
-<app-project-display [project]="projects[1]"></app-project-display>
-<div class="separator"></div>
-<app-cta-buttons></app-cta-buttons>
+<div style="display: flex; flex-direction: column; align-items: center;">
+    <h1>zalwicker.dev</h1>
+    <h3 style="margin-top: 16px;">A website and portfolio created by and for Zach Alwicker. Enjoy your visit!</h3>
+    <div class="separator"></div>
+    <app-project-display [project]="projects[1]"></app-project-display>
+    <div class="separator"></div>
+    <app-cta-buttons></app-cta-buttons>
+</div>
