--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,11 +1,13 @@
 <div class="navbar">
     <div style="flex: 1; display: flex; height: 100%; align-items: center; justify-content: left;">
-        <a routerLink="/" style="display: flex; height: 100%; align-items: center; justify-content: center; text-decoration: none;">
-            <div style="display: inline-block; aspect-ratio: 1; height: 80%;"><img src="assets/icon.png" style="width: 100%; height: 100%"></div>
+        <a routerLink="/"
+            style="display: flex; height: 100%; align-items: center; justify-content: center; text-decoration: none;">
+            <div style="display: inline-block; aspect-ratio: 1; height: 80%;"><img src="assets/icon.png"
+                    style="width: 100%; height: 100%"></div>
             <p class="site-name">Zach Alwicker</p>
         </a>
     </div>
-    <div style="flex: 1; display: flex; justify-content: center">
+    <div class="links">
         <a routerLink="/about" class="navbar-link">About</a>
         <a routerLink="/projects" class="navbar-link">Projects</a>
         <a routerLink="/resume" class="navbar-link">Resume</a>
