mobile viewing fixes

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -2,6 +2,12 @@
     padding: 16px 24vw;
 }
 
+@media screen and (max-width: 800px) {
+    .about {
+        padding: 16px 6vw;
+    }
+}
+
 .blurb {
     text-align: center;
     font-size: 18px;
@@ -9,6 +15,7 @@
     padding: 0px;
     margin-top: 4px;
 }
+
 h2 {
     margin-bottom: 8px;
 }
@@ -22,6 +29,7 @@ a {
     color: white;
     font-weight: 500;
 }
+
 p {
     margin-top: 4px;
 }
