--- a/src/app/project-display/project-display.component.css
+++ b/src/app/project-display/project-display.component.css
@@ -14,6 +14,10 @@
 }
 
 @media screen and (max-width: 800px) {
+    .project {
+        margin: 8px;
+    }
+
     .project-bg {
         flex-direction: column;
         margin: 8px 0;
