--- a/src/app/home/cta-buttons/cta-buttons.component.html
+++ b/src/app/home/cta-buttons/cta-buttons.component.html
@@ -1,10 +1,10 @@
 <div class="box-container">
-    <a href="/about" class="box">
+    <a routerLink="/about" class="box">
         <fa-icon [icon]="faUser" size="4x" style="color: white"></fa-icon>
         <h2>About Me</h2>
         <p>Learn about me and my goals in software development and game design.</p>
     </a>
-    <a href="/projects" class="box">
+    <a routerLink="/projects" class="box">
         <fa-icon [icon]="faLightbulb" size="4x" style="color: white"></fa-icon>
         <h2>My Projects</h2>
         <p>Look at projects I've worked on in the past and the skills I picked up from them.</p>
