--- a/src/app/project-display/project-display.component.html
+++ b/src/app/project-display/project-display.component.html
@@ -1,7 +1,8 @@
 <div class="project">
     <div class="project-bg">
-        <div style="flex: 1; display: flex; align-items: center; justify-content: right">
-            <img style="aspect-ratio: 16/9; width: 100%" [src]="project.image">
+        <div
+            style="flex: 1; display: flex; align-items: center; justify-content: center; aspect-ratio: 16/9; background-color: white;">
+            <img style="width: 100%; height: 100%" [ngStyle]="{'object-fit': project.imageType}" [src]="project.image">
         </div>
         <div style="flex: 1">
             <h3 style="text-align: left">{{project.name}}</h3>
