--- a/src/app/project-display/project-display.component.html
+++ b/src/app/project-display/project-display.component.html
@@ -1,5 +1,5 @@
 <div class="project">
-    <div class="project-bg">
+    <div class="project-bg" [ngClass]="{'reverse': index % 2 == 1}">
         <div
             style="flex: 1; display: flex; align-items: center; justify-content: center; aspect-ratio: 16/9; background-color: white;">
             <img style="width: 100%; height: 100%" [ngStyle]="{'object-fit': project.imageType}" [src]="project.image">
